* Fix {bz: 4514} by adding the overflow style to the DIV itself as it seems   IE6 doesn't support that style on the BODY element.

--- a/nlw/share/skin/s3/css/screen.ie6.css
+++ b/nlw/share/skin/s3/css/screen.ie6.css
@@ -95,3 +95,6 @@ div.widgetContent div.profile {
     margin-right: 5px;
 }
 
+#wysiwyg-editable-div {
+    overflow: auto !important;
+}
